Update to MAAS repo
Removing deprecated MAAS apt repo and replacing with current stable version.

--- a/roles/maasserver/tasks/main.yml
+++ b/roles/maasserver/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Update repository
   sudo: True
-  apt_repository: repo='ppa:maas-maintainers/stable'
+  apt_repository: repo='ppa:maas/stable'
 
 - name: Upgrade installation
   sudo: True
